--- a/index.html
+++ b/index.html
@@ -18,18 +18,35 @@
             <a href="">Gmail</a>
             <a href="">Imagenes</a>
             <a href=""> <img id="icon" src="https://cdn0.iconfinder.com/data/icons/basic-ui-45/40/apps-512.png" alt="Aplicaciones de Google"> </a>
-            <a href=""></a>
+            <a href=""> <button id="button1">Iniciar Sesión</button> </a>
         </div>
     </div>
     <!-- main de la pagina  -->
     <div id="main">
-        <div id="logo">logo</div>
-        <div id="buttons">buttons</div>
-        <div id="languages">languages</div>
+        <div id="LogoSearch"> <img id="logo" src="./img/Google_2015_logo.svg" alt="LogoGoogle">
+            <div id="fusion"><img class="icons" src="./img/lupa.png" alt="">
+                <input id="input" type="text">
+                <img class="icons" src="./img/micro.png" alt="">
+                <img class="icons" src="./img/camera.png" alt="">
+            </div> 
+        </div>
+        <div id="buttons">
+            <a href=""></a><button class="BotonesCentrales">Buscar con Google</button>
+            <a href=""></a><button class="BotonesCentrales">Voy a tener suerte</button>
+        </div>
+        <div id="languages">
+            <p id="PrimerParrafo">Ofrecido por Google en:
+            <a class="Idiomas" href="">Catalá</a>
+            <a class="Idiomas" href="">Galego</a>
+            <a class="Idiomas" href="">Euskara</a>
+            </p>
+        </div>
     </div>
     <!-- footer de la pagina -->
     <div id="footer">
-        <div id="top">top</div>
+        <div id="top">
+            <p id="SegundoParrafo">España</p>
+        </div>
         <div id="bottom">
             <div id="bottom-l">bottom-l</div>
             <div id="bottom-center">bottom-center</div>
