la doy por terminada

--- a/index.html
+++ b/index.html
@@ -46,11 +46,23 @@
     <div id="footer">
         <div id="top">
             <p id="SegundoParrafo">España</p>
+            <hr>
         </div>
         <div id="bottom">
-            <div id="bottom-l">bottom-l</div>
-            <div id="bottom-center">bottom-center</div>
-            <div id="bottom-r">bottom-r</div>
+            <div id="bottom-l">
+                <a class="enlacesFooter" href="">Publicidad</a> 
+                <a class="enlacesFooter" href="">Empresa</a> 
+                <a class="enlacesFooter" href="">Como funciona la búsqueda</a> 
+            </div>
+            <div id="bottom-center">
+                <img id="hoja" src="./img/hojita.png" alt="">
+                <p>Emisión neutra de carbono desde el 2007</p>
+            </div>
+            <div id="bottom-r">
+                <a class="enlacesFooterLeft" href="">Privacidad</a>
+                <a class="enlacesFooterLeft" href="">Términos</a>
+                <a class="enlacesFooterLeft" href="">Configuración</a>
+            </div>
         </div>
     </div>
 </body>
